# genetic

./: Cargo.toml
benches/: crossover_benchmark.rs
src/: error.rs  fitnesses.rs  ga.rs  gabuilder.rs  genotypes.rs  individual.rs  lib.rs  population.rs  types.rs
src/crossover/: exhaustive.rs  mod.rs  unique_genes.rs
src/fitness/: mod.rs  multiobjective.rs  pareto.rs  simple.rs
src/reinsert/: elitist.rs  mod.rs
src/select/: mod.rs  tournament.rs
