[package]
name = "genetic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
ordered-float = "3.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.7.0"
rusqlite = "0.28.0"
serde = { version = "1.0.158", features = ["derive"] }
thiserror = "1.0.39"
timeit = "0.1.2"

[dev-dependencies]
criterion = "0.4.0"
float-cmp = "0.9.0"
proptest = "1.1.0"

[[bench]]
name = "crossover_benchmark"
harness = false
